<resources>
    <string name="app_name">Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_user_name">Enter Email ...</string>
    <string name="enter_password">Enter Password ..</string>
    <string name="re_enter_password">Re-enter Password ...</string>
    <string name="full_name">Enter Full Name</string>
    <string name="enter_matricul">Enter Matricul Number</string>
    <string name="enter_level">Enter level of studies</string>
    <string name="enter_faculty">Enter Faculty Name</string>
    <string name="enter_department">Enter Department Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
</resources>
